--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@typescript-eslint/parser": "^5.40.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
