--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -6,7 +6,8 @@
     "extends": [
         "plugin:react/recommended",
         "standard-with-typescript",
-        "next/core-web-vitals"
+        "next/core-web-vitals",
+        "prettier"
     ],
     "overrides": [
     ],
@@ -31,6 +32,6 @@
         "no-unreachable": "error",
         "no-tabs": "off",
         "@typescript-eslint/indent": "off",
-        "indent": "off"
+        "indent": ["error", 2]
     }
 }
