--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint --fix --ext ts,tsx"
   },
   "dependencies": {
     "@typescript-eslint/parser": "^5.40.1",
@@ -23,6 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-next": "12.3.1",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
@@ -30,6 +31,10 @@
     "eslint-plugin-react": "^7.31.10",
     "jest": "^29.2.2",
     "jest-environment-jsdom": "^29.2.2",
+    "prettier": "^2.7.1",
     "typescript": "*"
-  }
+  },
+  "eslintIgnore": [
+    "jest.config.js"
+  ]
 }
