--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "@typescript-eslint/parser": "^5.40.1",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -33,6 +34,8 @@
     "jest": "^29.2.2",
     "jest-environment-jsdom": "^29.2.2",
     "prettier": "^2.7.1",
+    "sass": "^1.56.0",
+    "sass-loader": "^13.1.0",
     "typescript": "*"
   },
   "eslintIgnore": [
